minor changes from Grahmas original

--- a/Foundation project Part1_HTML and CSS/Castavote.html
+++ b/Foundation project Part1_HTML and CSS/Castavote.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 
@@ -12,7 +12,8 @@
 
 	<p>Who was the most talented classical music composer?<br>
 	We'd like to know which one is the most highly rated in popular opinion.<br>
-	Your can help us to find out by casting your vote.<br></p>
+	Your can help us to find out by casting your vote.<br>
+	</p>
 
 	<h2><p>Firstly, enter your name in the input box so that we can know who you are.<br></p></h2>
 	<p>Your name:
@@ -20,10 +21,10 @@
 	
 	<h2><p>Secondly, select the button relating to your choice of composer from the four given below.</p></h2>
 
-	<img src="beethoven.jpg">
-	<img src="handel.jpg">
-	<img src="mozart.jpg">
-	<img src="jsBach.jpg">
+	<img src="img/beethoven.jpg">
+	<img src="img/handel.jpg">
+	<img src="img/mozart.jpg">
+	<img src="img/jsBach.jpg">
 
 	<form>
   		<input type="radio" name="composer" value="beethoven" checked> Beethoven
@@ -36,3 +37,4 @@
 </body>
 
 </html>
+
